hw2/src/parser.output
Terminals unused in grammar

    TYPE
    DEF


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: ProgramUnit $end

    1 ProgramUnit: Program
    2            | Functions

    3 Program: ID SEMICOLON Declarations Functions CompoundStatement END

    4 Functions: %empty
    5          | Functions FunctionDeclaration
    6          | Functions FunctionDefinition

    7 FunctionDeclaration: FunctionHeader SEMICOLON

    8 FunctionDefinition: FunctionHeader CompoundStatement END

    9 FunctionHeader: ID LPAREN OptFormalArguments RPAREN COLON ScalarType
   10               | ID LPAREN OptFormalArguments RPAREN

   11 OptFormalArguments: %empty
   12                   | FormalArguments

   13 FormalArguments: FormalArgument
   14                | FormalArguments SEMICOLON FormalArgument

   15 FormalArgument: IDList COLON Type

   16 CompoundStatement: START Declarations Statements END

   17 Statements: %empty
   18           | Statements Statement

   19 Statement: SimpleStatement
   20          | ConditionalStatement
   21          | FunctionCallStatement
   22          | LoopStatement
   23          | ReturnStatement
   24          | CompoundStatement

   25 SimpleStatement: VariableReference ASSIGN Expression SEMICOLON
   26                | PRINT Expression SEMICOLON
   27                | READ VariableReference SEMICOLON

   28 VariableReference: ID OptBracketsExpression

   29 OptBracketsExpression: %empty
   30                      | BracketsExpression

   31 BracketsExpression: LBRAKET Expression RBRAKET
   32                   | LBRAKET Expression RBRAKET BracketsExpression

   33 ConditionalStatement: IF Expression THEN CompoundStatement ELSE CompoundStatement END IF
   34                     | IF Expression THEN CompoundStatement END IF

   35 FunctionCallStatement: FunctionCall SEMICOLON

   36 FunctionCall: ID LPAREN OptExpressionList RPAREN

   37 OptExpressionList: %empty
   38                  | ExpressionList

   39 ExpressionList: Expression
   40               | ExpressionList COMMA Expression

   41 LoopStatement: WHILE Expression DO CompoundStatement END DO
   42              | FOR ID ASSIGN INTEGER_LITERAL TO INTEGER_LITERAL DO CompoundStatement END DO

   43 ReturnStatement: RETURN Expression SEMICOLON

   44 LiteralConstant: INTEGER_LITERAL
   45                | REAL_LITERAL
   46                | STRING_LITERAL
   47                | BOOLEAN_LITERAL

   48 Expression: Expression ADD Expression
   49           | Expression SUB Expression
   50           | Expression MUL Expression
   51           | Expression DIV Expression
   52           | Expression MOD Expression
   53           | Expression LT Expression
   54           | Expression LE Expression
   55           | Expression NE Expression
   56           | Expression GE Expression
   57           | Expression GT Expression
   58           | Expression EQ Expression
   59           | Expression AND Expression
   60           | Expression OR Expression
   61           | NOT Expression
   62           | SUB Expression
   63           | LPAREN Expression RPAREN
   64           | VariableReference
   65           | FunctionCall
   66           | LiteralConstant

   67 Declarations: %empty
   68             | Declarations Declaration

   69 Declaration: VariableDeclaration
   70            | ConstantDeclaration

   71 VariableDeclaration: VAR IDList COLON Type SEMICOLON

   72 ConstantDeclaration: VAR IDList COLON ConstValue SEMICOLON

   73 IDList: ID
   74       | IDList COMMA ID

   75 ConstValue: OptMinus INTEGER_LITERAL
   76           | OptMinus REAL_LITERAL
   77           | STRING_LITERAL
   78           | BOOLEAN_LITERAL

   79 OptMinus: %empty
   80         | SUB

   81 Type: ScalarType
   82     | ArrayType

   83 ScalarType: INTEGER
   84           | BOOLEAN
   85           | STRING
   86           | REAL

   87 ArrayType: ARRAY INTEGER_LITERAL OF Type


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 3 9 10 28 36 42 73 74
    VAR (259) 71 72
    TYPE (260)
    INTEGER (261) 83
    BOOLEAN (262) 84
    STRING (263) 85
    REAL (264) 86
    INTEGER_LITERAL (265) 42 44 75 87
    BOOLEAN_LITERAL (266) 47 78
    STRING_LITERAL (267) 46 77
    REAL_LITERAL (268) 45 76
    COLON (269) 9 15 71 72
    SEMICOLON (270) 3 7 14 25 26 27 35 43 71 72
    COMMA (271) 40 74
    LPAREN (272) 9 10 36 63
    RPAREN (273) 9 10 36 63
    LBRAKET (274) 31 32
    RBRAKET (275) 31 32
    START (276) 16
    END (277) 3 8 16 33 34 41 42
    PRINT (278) 26
    ASSIGN (279) 25 42
    READ (280) 27
    DEF (281)
    IF (282) 33 34
    THEN (283) 33 34
    ELSE (284) 33
    WHILE (285) 41
    DO (286) 41 42
    FOR (287) 42
    TO (288) 42
    RETURN (289) 43
    ARRAY (290) 87
    OF (291) 87
    ADD (292) 48
    SUB (293) 49 62 80
    MUL (294) 50
    DIV (295) 51
    MOD (296) 52
    LE (297) 54
    NE (298) 55
    GE (299) 56
    GT (300) 57
    LT (301) 53
    EQ (302) 58
    AND (303) 59
    OR (304) 60
    NOT (305) 61
    UMINUS (306)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    ProgramUnit (53)
        on left: 1 2
        on right: 0
    Program (54)
        on left: 3
        on right: 1
    Functions (55)
        on left: 4 5 6
        on right: 2 3 5 6
    FunctionDeclaration (56)
        on left: 7
        on right: 5
    FunctionDefinition (57)
        on left: 8
        on right: 6
    FunctionHeader (58)
        on left: 9 10
        on right: 7 8
    OptFormalArguments (59)
        on left: 11 12
        on right: 9 10
    FormalArguments (60)
        on left: 13 14
        on right: 12 14
    FormalArgument (61)
        on left: 15
        on right: 13 14
    CompoundStatement (62)
        on left: 16
        on right: 3 8 24 33 34 41 42
    Statements (63)
        on left: 17 18
        on right: 16 18
    Statement (64)
        on left: 19 20 21 22 23 24
        on right: 18
    SimpleStatement (65)
        on left: 25 26 27
        on right: 19
    VariableReference (66)
        on left: 28
        on right: 25 27 64
    OptBracketsExpression (67)
        on left: 29 30
        on right: 28
    BracketsExpression (68)
        on left: 31 32
        on right: 30 32
    ConditionalStatement (69)
        on left: 33 34
        on right: 20
    FunctionCallStatement (70)
        on left: 35
        on right: 21
    FunctionCall (71)
        on left: 36
        on right: 35 65
    OptExpressionList (72)
        on left: 37 38
        on right: 36
    ExpressionList (73)
        on left: 39 40
        on right: 38 40
    LoopStatement (74)
        on left: 41 42
        on right: 22
    ReturnStatement (75)
        on left: 43
        on right: 23
    LiteralConstant (76)
        on left: 44 45 46 47
        on right: 66
    Expression (77)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 25 26 31 32 33 34 39 40 41 43 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    Declarations (78)
        on left: 67 68
        on right: 3 16 68
    Declaration (79)
        on left: 69 70
        on right: 68
    VariableDeclaration (80)
        on left: 71
        on right: 69
    ConstantDeclaration (81)
        on left: 72
        on right: 70
    IDList (82)
        on left: 73 74
        on right: 15 71 72 74
    ConstValue (83)
        on left: 75 76 77 78
        on right: 72
    OptMinus (84)
        on left: 79 80
        on right: 75 76
    Type (85)
        on left: 81 82
        on right: 15 71 87
    ScalarType (86)
        on left: 83 84 85 86
        on right: 9 81
    ArrayType (87)
        on left: 87
        on right: 82


State 0

    0 $accept: . ProgramUnit $end

    ID  shift, and go to state 1

    ID        [reduce using rule 4 (Functions)]
    $default  reduce using rule 4 (Functions)

    ProgramUnit  go to state 2
    Program      go to state 3
    Functions    go to state 4


State 1

    3 Program: ID . SEMICOLON Declarations Functions CompoundStatement END

    SEMICOLON  shift, and go to state 5


State 2

    0 $accept: ProgramUnit . $end

    $end  shift, and go to state 6


State 3

    1 ProgramUnit: Program .

    $default  reduce using rule 1 (ProgramUnit)


State 4

    2 ProgramUnit: Functions .
    5 Functions: Functions . FunctionDeclaration
    6          | Functions . FunctionDefinition

    ID  shift, and go to state 7

    $default  reduce using rule 2 (ProgramUnit)

    FunctionDeclaration  go to state 8
    FunctionDefinition   go to state 9
    FunctionHeader       go to state 10


State 5

    3 Program: ID SEMICOLON . Declarations Functions CompoundStatement END

    $default  reduce using rule 67 (Declarations)

    Declarations  go to state 11


State 6

    0 $accept: ProgramUnit $end .

    $default  accept


State 7

    9 FunctionHeader: ID . LPAREN OptFormalArguments RPAREN COLON ScalarType
   10               | ID . LPAREN OptFormalArguments RPAREN

    LPAREN  shift, and go to state 12


State 8

    5 Functions: Functions FunctionDeclaration .

    $default  reduce using rule 5 (Functions)


State 9

    6 Functions: Functions FunctionDefinition .

    $default  reduce using rule 6 (Functions)


State 10

    7 FunctionDeclaration: FunctionHeader . SEMICOLON
    8 FunctionDefinition: FunctionHeader . CompoundStatement END

    SEMICOLON  shift, and go to state 13
    START      shift, and go to state 14

    CompoundStatement  go to state 15


State 11

    3 Program: ID SEMICOLON Declarations . Functions CompoundStatement END
   68 Declarations: Declarations . Declaration

    VAR  shift, and go to state 16

    $default  reduce using rule 4 (Functions)

    Functions            go to state 17
    Declaration          go to state 18
    VariableDeclaration  go to state 19
    ConstantDeclaration  go to state 20


State 12

    9 FunctionHeader: ID LPAREN . OptFormalArguments RPAREN COLON ScalarType
   10               | ID LPAREN . OptFormalArguments RPAREN

    ID  shift, and go to state 21

    $default  reduce using rule 11 (OptFormalArguments)

    OptFormalArguments  go to state 22
    FormalArguments     go to state 23
    FormalArgument      go to state 24
    IDList              go to state 25


State 13

    7 FunctionDeclaration: FunctionHeader SEMICOLON .

    $default  reduce using rule 7 (FunctionDeclaration)


State 14

   16 CompoundStatement: START . Declarations Statements END

    $default  reduce using rule 67 (Declarations)

    Declarations  go to state 26


State 15

    8 FunctionDefinition: FunctionHeader CompoundStatement . END

    END  shift, and go to state 27


State 16

   71 VariableDeclaration: VAR . IDList COLON Type SEMICOLON
   72 ConstantDeclaration: VAR . IDList COLON ConstValue SEMICOLON

    ID  shift, and go to state 21

    IDList  go to state 28


State 17

    3 Program: ID SEMICOLON Declarations Functions . CompoundStatement END
    5 Functions: Functions . FunctionDeclaration
    6          | Functions . FunctionDefinition

    ID     shift, and go to state 7
    START  shift, and go to state 14

    FunctionDeclaration  go to state 8
    FunctionDefinition   go to state 9
    FunctionHeader       go to state 10
    CompoundStatement    go to state 29


State 18

   68 Declarations: Declarations Declaration .

    $default  reduce using rule 68 (Declarations)


State 19

   69 Declaration: VariableDeclaration .

    $default  reduce using rule 69 (Declaration)


State 20

   70 Declaration: ConstantDeclaration .

    $default  reduce using rule 70 (Declaration)


State 21

   73 IDList: ID .

    $default  reduce using rule 73 (IDList)


State 22

    9 FunctionHeader: ID LPAREN OptFormalArguments . RPAREN COLON ScalarType
   10               | ID LPAREN OptFormalArguments . RPAREN

    RPAREN  shift, and go to state 30


State 23

   12 OptFormalArguments: FormalArguments .
   14 FormalArguments: FormalArguments . SEMICOLON FormalArgument

    SEMICOLON  shift, and go to state 31

    $default  reduce using rule 12 (OptFormalArguments)


State 24

   13 FormalArguments: FormalArgument .

    $default  reduce using rule 13 (FormalArguments)


State 25

   15 FormalArgument: IDList . COLON Type
   74 IDList: IDList . COMMA ID

    COLON  shift, and go to state 32
    COMMA  shift, and go to state 33


State 26

   16 CompoundStatement: START Declarations . Statements END
   68 Declarations: Declarations . Declaration

    VAR  shift, and go to state 16

    $default  reduce using rule 17 (Statements)

    Statements           go to state 34
    Declaration          go to state 18
    VariableDeclaration  go to state 19
    ConstantDeclaration  go to state 20


State 27

    8 FunctionDefinition: FunctionHeader CompoundStatement END .

    $default  reduce using rule 8 (FunctionDefinition)


State 28

   71 VariableDeclaration: VAR IDList . COLON Type SEMICOLON
   72 ConstantDeclaration: VAR IDList . COLON ConstValue SEMICOLON
   74 IDList: IDList . COMMA ID

    COLON  shift, and go to state 35
    COMMA  shift, and go to state 33


State 29

    3 Program: ID SEMICOLON Declarations Functions CompoundStatement . END

    END  shift, and go to state 36


State 30

    9 FunctionHeader: ID LPAREN OptFormalArguments RPAREN . COLON ScalarType
   10               | ID LPAREN OptFormalArguments RPAREN .

    COLON  shift, and go to state 37

    $default  reduce using rule 10 (FunctionHeader)


State 31

   14 FormalArguments: FormalArguments SEMICOLON . FormalArgument

    ID  shift, and go to state 21

    FormalArgument  go to state 38
    IDList          go to state 25


State 32

   15 FormalArgument: IDList COLON . Type

    INTEGER  shift, and go to state 39
    BOOLEAN  shift, and go to state 40
    STRING   shift, and go to state 41
    REAL     shift, and go to state 42
    ARRAY    shift, and go to state 43

    Type        go to state 44
    ScalarType  go to state 45
    ArrayType   go to state 46


State 33

   74 IDList: IDList COMMA . ID

    ID  shift, and go to state 47


State 34

   16 CompoundStatement: START Declarations Statements . END
   18 Statements: Statements . Statement

    ID      shift, and go to state 48
    START   shift, and go to state 14
    END     shift, and go to state 49
    PRINT   shift, and go to state 50
    READ    shift, and go to state 51
    IF      shift, and go to state 52
    WHILE   shift, and go to state 53
    FOR     shift, and go to state 54
    RETURN  shift, and go to state 55

    CompoundStatement      go to state 56
    Statement              go to state 57
    SimpleStatement        go to state 58
    VariableReference      go to state 59
    ConditionalStatement   go to state 60
    FunctionCallStatement  go to state 61
    FunctionCall           go to state 62
    LoopStatement          go to state 63
    ReturnStatement        go to state 64


State 35

   71 VariableDeclaration: VAR IDList COLON . Type SEMICOLON
   72 ConstantDeclaration: VAR IDList COLON . ConstValue SEMICOLON

    INTEGER          shift, and go to state 39
    BOOLEAN          shift, and go to state 40
    STRING           shift, and go to state 41
    REAL             shift, and go to state 42
    BOOLEAN_LITERAL  shift, and go to state 65
    STRING_LITERAL   shift, and go to state 66
    ARRAY            shift, and go to state 43
    SUB              shift, and go to state 67

    $default  reduce using rule 79 (OptMinus)

    ConstValue  go to state 68
    OptMinus    go to state 69
    Type        go to state 70
    ScalarType  go to state 45
    ArrayType   go to state 46


State 36

    3 Program: ID SEMICOLON Declarations Functions CompoundStatement END .

    $default  reduce using rule 3 (Program)


State 37

    9 FunctionHeader: ID LPAREN OptFormalArguments RPAREN COLON . ScalarType

    INTEGER  shift, and go to state 39
    BOOLEAN  shift, and go to state 40
    STRING   shift, and go to state 41
    REAL     shift, and go to state 42

    ScalarType  go to state 71


State 38

   14 FormalArguments: FormalArguments SEMICOLON FormalArgument .

    $default  reduce using rule 14 (FormalArguments)


State 39

   83 ScalarType: INTEGER .

    $default  reduce using rule 83 (ScalarType)


State 40

   84 ScalarType: BOOLEAN .

    $default  reduce using rule 84 (ScalarType)


State 41

   85 ScalarType: STRING .

    $default  reduce using rule 85 (ScalarType)


State 42

   86 ScalarType: REAL .

    $default  reduce using rule 86 (ScalarType)


State 43

   87 ArrayType: ARRAY . INTEGER_LITERAL OF Type

    INTEGER_LITERAL  shift, and go to state 72


State 44

   15 FormalArgument: IDList COLON Type .

    $default  reduce using rule 15 (FormalArgument)


State 45

   81 Type: ScalarType .

    $default  reduce using rule 81 (Type)


State 46

   82 Type: ArrayType .

    $default  reduce using rule 82 (Type)


State 47

   74 IDList: IDList COMMA ID .

    $default  reduce using rule 74 (IDList)


State 48

   28 VariableReference: ID . OptBracketsExpression
   36 FunctionCall: ID . LPAREN OptExpressionList RPAREN

    LPAREN   shift, and go to state 73
    LBRAKET  shift, and go to state 74

    $default  reduce using rule 29 (OptBracketsExpression)

    OptBracketsExpression  go to state 75
    BracketsExpression     go to state 76


State 49

   16 CompoundStatement: START Declarations Statements END .

    $default  reduce using rule 16 (CompoundStatement)


State 50

   26 SimpleStatement: PRINT . Expression SEMICOLON

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 87


State 51

   27 SimpleStatement: READ . VariableReference SEMICOLON

    ID  shift, and go to state 88

    VariableReference  go to state 89


State 52

   33 ConditionalStatement: IF . Expression THEN CompoundStatement ELSE CompoundStatement END IF
   34                     | IF . Expression THEN CompoundStatement END IF

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 90


State 53

   41 LoopStatement: WHILE . Expression DO CompoundStatement END DO

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 91


State 54

   42 LoopStatement: FOR . ID ASSIGN INTEGER_LITERAL TO INTEGER_LITERAL DO CompoundStatement END DO

    ID  shift, and go to state 92


State 55

   43 ReturnStatement: RETURN . Expression SEMICOLON

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 93


State 56

   24 Statement: CompoundStatement .

    $default  reduce using rule 24 (Statement)


State 57

   18 Statements: Statements Statement .

    $default  reduce using rule 18 (Statements)


State 58

   19 Statement: SimpleStatement .

    $default  reduce using rule 19 (Statement)


State 59

   25 SimpleStatement: VariableReference . ASSIGN Expression SEMICOLON

    ASSIGN  shift, and go to state 94


State 60

   20 Statement: ConditionalStatement .

    $default  reduce using rule 20 (Statement)


State 61

   21 Statement: FunctionCallStatement .

    $default  reduce using rule 21 (Statement)


State 62

   35 FunctionCallStatement: FunctionCall . SEMICOLON

    SEMICOLON  shift, and go to state 95


State 63

   22 Statement: LoopStatement .

    $default  reduce using rule 22 (Statement)


State 64

   23 Statement: ReturnStatement .

    $default  reduce using rule 23 (Statement)


State 65

   78 ConstValue: BOOLEAN_LITERAL .

    $default  reduce using rule 78 (ConstValue)


State 66

   77 ConstValue: STRING_LITERAL .

    $default  reduce using rule 77 (ConstValue)


State 67

   80 OptMinus: SUB .

    $default  reduce using rule 80 (OptMinus)


State 68

   72 ConstantDeclaration: VAR IDList COLON ConstValue . SEMICOLON

    SEMICOLON  shift, and go to state 96


State 69

   75 ConstValue: OptMinus . INTEGER_LITERAL
   76           | OptMinus . REAL_LITERAL

    INTEGER_LITERAL  shift, and go to state 97
    REAL_LITERAL     shift, and go to state 98


State 70

   71 VariableDeclaration: VAR IDList COLON Type . SEMICOLON

    SEMICOLON  shift, and go to state 99


State 71

    9 FunctionHeader: ID LPAREN OptFormalArguments RPAREN COLON ScalarType .

    $default  reduce using rule 9 (FunctionHeader)


State 72

   87 ArrayType: ARRAY INTEGER_LITERAL . OF Type

    OF  shift, and go to state 100


State 73

   36 FunctionCall: ID LPAREN . OptExpressionList RPAREN

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    $default  reduce using rule 37 (OptExpressionList)

    VariableReference  go to state 84
    FunctionCall       go to state 85
    OptExpressionList  go to state 101
    ExpressionList     go to state 102
    LiteralConstant    go to state 86
    Expression         go to state 103


State 74

   31 BracketsExpression: LBRAKET . Expression RBRAKET
   32                   | LBRAKET . Expression RBRAKET BracketsExpression

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 104


State 75

   28 VariableReference: ID OptBracketsExpression .

    $default  reduce using rule 28 (VariableReference)


State 76

   30 OptBracketsExpression: BracketsExpression .

    $default  reduce using rule 30 (OptBracketsExpression)


State 77

   44 LiteralConstant: INTEGER_LITERAL .

    $default  reduce using rule 44 (LiteralConstant)


State 78

   47 LiteralConstant: BOOLEAN_LITERAL .

    $default  reduce using rule 47 (LiteralConstant)


State 79

   46 LiteralConstant: STRING_LITERAL .

    $default  reduce using rule 46 (LiteralConstant)


State 80

   45 LiteralConstant: REAL_LITERAL .

    $default  reduce using rule 45 (LiteralConstant)


State 81

   63 Expression: LPAREN . Expression RPAREN

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 105


State 82

   62 Expression: SUB . Expression

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 106


State 83

   61 Expression: NOT . Expression

    ID               shift, and go to state 48
    INTEGER_LITERAL  shift, and go to state 77
    BOOLEAN_LITERAL  shift, and go to state 78
    STRING_LITERAL   shift, and go to state 79
    REAL_LITERAL     shift, and go to state 80
    LPAREN           shift, and go to state 81
    SUB              shift, and go to state 82
    NOT              shift, and go to state 83

    VariableReference  go to state 84
    FunctionCall       go to state 85
    LiteralConstant    go to state 86
    Expression         go to state 107


State 84

   64 Expression: VariableReference .

    $default  reduce using rule 64 (Expression)


State 85

   65 Expression: FunctionCall .

    $default  reduce using rule 65 (Expression)


State 86

   66 Expression: LiteralConstant .

    $default  reduce using rule 66 (Expression)


State 87

   26 SimpleStatement: PRINT Expression . SEMICOLON
   48 Expression: Expression . ADD Expression
   49           | Expression . SUB Expression
   50           | Expression . MUL Expression
   51           | Expression . DIV Expression
   52           | Expression . MOD Expression
   53           | Expression . LT Expression
   54           | Expression . LE Expression
   55           | Expression . NE Expression
   56           | Expression . GE Expression
   57           | Expression . GT Expression
   58           | Expression . EQ Expression
   59           | Expression . AND Expression
   60           | Expression . OR Expression

    SEMICOLON  shift, and go to state 108
    ADD        shift, and go to state 109
    SUB        shift, and go to state 110
    MUL        shift, and go to state 111
    DIV        shift, and go to state 112
    MOD        shift, and go to state 113
    LE         shift, and go to state 114
    NE         shift, and go to state 115
    GE         shift, and go to state 116
    GT         shift, and go to state 117
    LT         shift, and go to state 118
    EQ         shift, and go to state 119
    AND        shift, and go to state 120
    OR         shift, and go to state 121


State 88

   28 VariableReference: ID . OptBracketsExpression

    LBRAKET  shift, and go to state 74

    $default  reduce using rule 29 (OptBracketsExpression)

    OptBracketsExpression  go to state 75
    BracketsExpression     go to state 76


State 89

   27 SimpleStatement: READ VariableReference . SEMICOLON

    SEMICOLON  shift, and go to state 122


State 90

   33 ConditionalStatement: IF Expression . THEN CompoundStatement ELSE CompoundStatement END IF
   34                     | IF Expression . THEN CompoundStatement END IF
   48 Expression: Expression . ADD Expression
   49           | Expression . SUB Expression
   50           | Expression . MUL Expression
   51           | Expression . DIV Expression
   52           | Expression . MOD Expression
   53           | Expression . LT Expression
   54           | Expression . LE Expression
   55           | Expression . NE Expression
   56           | Expression . GE Expression
   57           | Expression . GT Expression
   58           | Expression . EQ Expression
   59           | Expression . AND Expression
   60           | Expression . OR Expression

    THEN  shift, and go to state 123
    ADD   shift, and go to state 109
    SUB   shift, and go to state 110
    MUL   shift, and go to state 111
    DIV   shift, and go to state 112
    MOD   shift, and go to state 113
    LE    shift, and go to state 114
    NE    shift, and go to state 115
    GE    shift, and go to state 116
    GT    shift, and go to state 117
    LT    shift, and go to state 118
    EQ    shift, and go to state 119
    AND   shift, and go to state 120
    OR    shift, and go to state 121


State 91

   41 LoopStatement: WHILE Expression . DO CompoundStatement END DO
   48 Expression: Expression . ADD Expression
   49           | Expression . SUB Expression
   50           | Expression . MUL Expression
   51           | Expression . DIV Expression
   52           | Expression . MOD Expression
   53           | Expression . LT Expression
   54           | Expression . LE Expression
   55           | Expression . NE Expression
   56           | Expression . GE Expression
   57           | Expression . GT Expression
   58           | Expression . EQ Expression
   59           | Expression . AND Expression
   60           | Expression . OR Expression

    DO   shift, and go to state 124
    ADD  shift, and go to state 109
    SUB  shift, and go to state 110
    MUL  shift, and go to state 111
    DIV  shift, and go to state 112
    MOD  shift, and go to state 113
    LE   shift, and go to state 114
    NE   shift, and go to state 115
    GE   shift, and go to state 116
    GT   shift, and go to state 117
    LT   shift, and go to state 118
    EQ   shift, and go to state 119
    AND  shift, and go to state 120
    OR   shift, and go to state 121


State 92

   42 LoopStatement: FOR ID . ASSIGN INTEGER_LITERAL TO INTEGER_LITERAL DO CompoundStatement END DO

    ASSIGN  shift, and go to state 125


State 93
